added all the ores to the gen class
Still need to change the hight